--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,11 @@
     <title>ViaPlay</title>
     <link rel="stylesheet" href="/styles/main.css" th:href="@{/styles/main.css}" type="text/css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="javascript" th:href="@{/static/scripts/common.js}"/>
 
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <script src="../static/scripts/common.js"></script>
 
 
 </head>
@@ -151,7 +153,8 @@
                                                         <span>
                                                             <a class="MyList-module-container-zkH2- Buttons-module-secondary-br7-v Buttons-module-icon-ODVKH MyList-module-featureBox-F6kLA"
                                                                tabindex="-1">
-                                                                <div class="MyList-module-myList-kmBI5"></div>
+                                                                <div class="MyList-module-myList-kmBI5" data-testhook="item-star" th:classappend="${item.onUserList ? 'MyList-module-active-T4Dnx' : ''}"
+                                                                     th:attr="data-imdb-id=${item.imdbId}"></div>
                                                             </a>
                                                         </span>
                                                     </div>
@@ -312,10 +315,7 @@
                             </div>
                         </section>
                     </div>
-
                     <div th:replace="~{fragments :: movies-carousel(genreTitle=${thrillerMoviesTitle}, genre=${thrillerGenre}, movies=${thrillerMovies})}"></div>
-
-
                 </div>
             </div>
 
@@ -323,29 +323,38 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>-->
+<script type="text/javascript" src="/scripts/common.js"></script>
 <script>
-    document.querySelectorAll('.StarButton-module-container-sGC0y').forEach(button => {
-        button.addEventListener('click', function() {
+    document.querySelectorAll('.MyList-module-myList-kmBI5').forEach(button => {
+        button.addEventListener('click', function () {
             var imdbId = this.getAttribute('data-imdb-id');
 
-            // Pobierz token CSRF
             var csrfToken = document.querySelector('meta[name="_csrf"]').content;
             var csrfHeader = document.querySelector('meta[name="_csrf_header"]').content;
 
-            // Utwórz nagłówki z tokenem CSRF
             var headers = new Headers();
             headers.append(csrfHeader, csrfToken);
 
-            // Wyślij żądanie do serwera z odpowiednimi nagłówkami
-            fetch('library/add-to-list/' + imdbId, {
-                method: 'POST',
+            var isStarred = this.classList.contains('MyList-module-active-T4Dnx');
+
+            var method = isStarred ? 'DELETE' : 'POST';
+
+            // Utwórz pełny adres URL
+            var baseUrl = window.location.origin + '/library/';
+            var apiUrl = (isStarred ? 'remove-from-list/' : 'add-to-list/') + imdbId;
+            var fullUrl = baseUrl + apiUrl;
+
+            fetch(fullUrl, {
+                method: method,
                 headers: headers
             })
                 .then(response => {
-                    if(response.ok) {
-                        // Zmiana wyglądu przycisku na "dodano"
-                        this.classList.add('StarButton-module-isStarred-v2AtG');
+                    if (response.ok) {
+                        this.classList.toggle('MyList-module-active-T4Dnx', !isStarred);
                     }
                 })
                 .catch(error => console.error('Error:', error));
@@ -353,11 +362,6 @@
     });
 
 </script>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>-->
-<script type="text/javascript" src="/scripts/common.js"></script>
 
 </body>
 </html>
